more lines of report

--- a/report/doc/pim.bib
+++ b/report/doc/pim.bib
@@ -44,22 +44,46 @@
   organization = {OpenNI organization}, 
   month = {November}, 
   year = {2010}, 
-  note = {Last viewed 19-04-2013 11:32}, 
   url = {http://www.openni.org/documentation}, 
+  keywords = {Openni},
 } 
 
 @MANUAL{PrimeSense2010, 
   title = {Prime Sensor NITE 1.3 Algorithms notes}, 
   organization = {PrimeSense Inc.}, 
   year = {2010}, 
-  note = {Last viewed 19-01-2011 15:34}, 
   url = {http://www.primesense.com},
+  keywords = {PrimeSense},
 } 
 
 @MISC{Pencil, 
-  title = {Pencil Project}, 
+  title = {Pencil Project: An open-source GUI prototyping tool}, 
   organization = {Evolus}, 
   year = {2012}, 
   url = {http://pencil.evolus.vn/},
+  keywords = {Pencil},
 } 
 
+@MISC{QT, 
+  title = {QT Project: a cross-platform application and UI framework}, 
+  organization = {Digia}, 
+  year = {2013}, 
+  url = {http://qt-project.org/},
+  keywords = {QT},
+} 
+
+@MISC{OpenMP, 
+  title = {OpenMP: specification for parallel programming}, 
+  organization = {OpenMP}, 
+  year = {2013}, 
+  url = {http://openmp.org},
+  keywords = {OpenMP},
+} 
+
+@MISC{eigen, 
+  title = {Eigen: a C++ template library for linear algebra.}, 
+  organization = {Eigen}, 
+  year = {2013}, 
+  url = {http://eigen.tuxfamily.org},
+  keywords = {Eigen},
+} 
