Changing figures with final results

--- a/report/slides/pim.tex
+++ b/report/slides/pim.tex
@@ -132,9 +132,9 @@
   \end{block}
 
   \begin{bkblock}{Matériel}
-    \begin{center}
+    \begin{centering}
       \includegraphics[scale=0.2]{img/kinect}
-    \end{center}
+    \end{centering}
   \end{bkblock}
 
   \begin{greyblock}{Environement}
@@ -159,7 +159,9 @@
 \end{frame}
 
 \begin{frame}{Les étapes}
+  \begin{center}
     \includegraphics[width=\textwidth]{img/projDiagram}
+  \end{center}
 \end{frame}
 
 
