Adding Results part

--- a/report/doc/pim.sty
+++ b/report/doc/pim.sty
@@ -26,7 +26,9 @@
 \RequirePackage{dsfont}
 
 \RequirePackage[linkbordercolor={1 1 1},urlcolor=black,citecolor=black,linkcolor=black,colorlinks=true]{hyperref} % links
-\RequirePackage{subfig}
+\RequirePackage{graphicx}
+\RequirePackage{caption}
+\RequirePackage{subcaption}
 \RequirePackage[letterpaper]{geometry}
 \geometry{verbose,lmargin=2.0cm,rmargin=2.0cm,top=3cm, bottom=2.0cm}
 
